--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <input type="image" class="navbar-toggler nav-icons" id="navbar-toggler" src="icons/menu.png">
                 <li class="nav-brand">
+                    <img class="nav-icons" src="icons/256x256.jpg">
                     <a href="">Brand</a>
                 </li>
                 <div class="collapsible">
@@ -65,6 +66,14 @@
                 <input type="submit" value="Submit">
             </div>
         </div>
+
+        <div class="index-main">
+
+        </div>
+
+        <footer>
+            <span>&copy; Luna Framework 2022. All rights reserved. <span>&middot;</span> Brought to you by <a href="https://www.skyenterprisesau.com">Sky Enterprises</a></span>
+        </footer>
 
         <!-- JS -->
         <script src="main.js"></script>
